fix: update remix docs from catch boundary to error boundary

--- a/docs/references/remix/clerk-error-boundary.mdx
+++ b/docs/references/remix/clerk-error-boundary.mdx
@@ -1,11 +1,11 @@
 ---
-title: ClerkCatchBoundary()
-description: Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens, Clerk uses Remix's catch boundary feature.
+title: ClerkErrorBoundary()
+description: Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens, Clerk uses Remix's error boundary feature.
 ---
 
-# `ClerkCatchBoundary()`
+# `ClerkErrorBoundary()`
 
-Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens Clerk [uses Remix's catch boundary feature](https://remix.run/docs/en/main/route/catch-boundary).
+Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens Clerk [uses Remix's error boundary feature](https://remix.run/docs/en/main/route/error-boundary).
 
 > If you do not implement this into your app, you will see a 401 after a short period of time even though your user is logged in.
 
@@ -24,7 +24,7 @@ import {
 } from "@remix-run/react";
 
 import { rootAuthLoader } from "@clerk/remix/ssr.server";
-import { ClerkApp, ClerkCatchBoundary } from "@clerk/remix";
+import { ClerkApp, ClerkErrorBoundary } from "@clerk/remix";
 
 export const meta: MetaFunction = () => ({
   charset: "utf-8",
@@ -34,8 +34,8 @@ export const meta: MetaFunction = () => ({
 
 export const loader: LoaderFunction = (args) => rootAuthLoader(args);
 
-// add a Catch Boundary
-export const CatchBoundary = ClerkCatchBoundary();
+// add an error boundary
+export const ErrorBoundary = ClerkErrorBoundary();
 
 function App() {
   return (
@@ -57,14 +57,14 @@ function App() {
 export default ClerkApp(App);
 ```
 
-If you need to add a custom boundary to your application you can pass it as an argument to the `ClerkCatchBoundary`.
+If you need to add a custom boundary to your application you can pass it as an argument to the `ClerkErrorBoundary`.
 
 ```tsx
-export const CatchBoundary = ClerkCatchBoundary(YourBoundary);
+export const ErrorBoundary = ClerkErrorBoundary(YourBoundary);
 ```
 
 ## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `RootCatchBoundary?` | `React.ComponentType` | An optional component used as your application boundary. |
+| `RootErrorBoundary?` | `React.ComponentType` | An optional component used as your application boundary. |
