tweaking content in roles-perms overview

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -18,4 +18,4 @@ Clerk provides [prebuilt components](https://clerk.com/docs/components/overview
 
 ## Roles
 
-Roles determine a user's level of access and permissions within an organization. Clerk comes with two default roles, `admin` and `basic_member`, and lets you create your own custom roles. Learn more in (Roles and Permissions)[/docs/organizations/roles-permissions].
+Roles determine a user's level of access and permissions within an organization. Clerk comes with two default roles, `admin` and `basic_member`, and lets you create your own custom roles. Learn more in [Roles and Permissions](/docs/organizations/roles-permissions).
