--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -28,7 +28,7 @@ Permissions grant users privileged access to resources and operations like creat
 
 ### System Permissions
 
-Clerk has a set of System Permissions that power Clerk’s Frontend API and [Organization related Clerk Components](https://clerk.com/docs/components/overview#organization-components). Clerk’s System Permissions consist of the following:
+Clerk has a set of System Permissions that power Clerk’s Frontend API and [Organization related Clerk Components](/docs/components/overview#organization-components). Clerk’s System Permissions consist of the following:
 
 - Manage organization (`org:sys_profile:manage`)
 - Delete organization (`org:sys_profile:delete`)
@@ -43,11 +43,11 @@ You can assign these System Permissions to Roles.
 
 If a Role has **delete organization, read members,** and **manage members** Permissions, it can be assigned the “Creator Role.” The Admin role is the Creator Role by default. Organization owners and users with the Creator Role can:
 
-- [create organizations](https://clerk.com/docs/organizations/creating-organizations)
-- [invite other users to join the organization](https://clerk.com/docs/organizations/inviting-users) An invitation email is sent out, and organization invitations support adding existing users of your application, or new ones. New users can register once they accept the invitation.
-- use [verified domains](https://clerk.com/docs/organizations/verified-domains) to enhance how users can join organizations. Once a verified domain is added to an organization, administrators can choose between different enrollment modes that will determine how new members will be added.
-- [manage roles](https://clerk.com/docs/organizations/managing-roles), such as revoking an invitation for a user that hasn't joined yet or removing a user who is already a member from the organization. When removing organization members or updating their role, there needs to be at least one administrator for the organization at all times.
-- [update an organization name](https://clerk.com/docs/organizations/updating-organizations)
+- [create organizations](/docs/organizations/creating-organizations)
+- [invite other users to join the organization](/docs/organizations/inviting-users) An invitation email is sent out, and organization invitations support adding existing users of your application, or new ones. New users can register once they accept the invitation.
+- use [verified domains](/docs/organizations/verified-domains) to enhance how users can join organizations. Once a verified domain is added to an organization, administrators can choose between different enrollment modes that will determine how new members will be added.
+- [manage roles](/docs/organizations/managing-roles), such as revoking an invitation for a user that hasn't joined yet or removing a user who is already a member from the organization. When removing organization members or updating their role, there needs to be at least one administrator for the organization at all times.
+- [update an organization name](/docs/organizations/updating-organizations)
 
 If you want to delete the Admin role, you will will have to create another role with the same System Permissions and assign it the “Creator Role.
 
