update images with new assets

--- a/docs/authentication/social-connections/linkedin-oidc.mdx
+++ b/docs/authentication/social-connections/linkedin-oidc.mdx
@@ -24,9 +24,9 @@ description: Learn how to set up a social connection with LinkedIn in your Clerk
 
 ## Introduction
 
-To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed. Simply navigate to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) in your Clerk Dashboard, toggle on the LinkedIn option, and click **Save**.
+To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for *development instances* - no other configuration is needed. Navigate to the Clerk Dashboard and go to **User & Authentication -> [Social Connections](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections)**. Scroll to find the LinkedIn option, toggle it on, and click **Save**.
 
-In production instances, you must provide custom credentials, which includes generating your own Client ID and Client Secret using your LinkedIn Developer account. Don't worry, this tutorial will walk you through that process in just a few steps.
+In *production instances*, you must provide custom credentials, which includes generating your own Client ID and Client Secret using your LinkedIn Developer account. Don't worry, this tutorial will walk you through that process in just a few steps.
 
 ## Tutorial
 
@@ -34,21 +34,21 @@ In production instances, you must provide custom credentials, which includes gen
 
 ### Create a LinkedIn application
 
-To create a new OAuth LinkedIn app, go to the [LinkedIn Developer dashboard](https://developer.linkedin.com/) and click on the **Create app** button.
+To create a new OAuth LinkedIn app, go to the [LinkedIn Developer portal](https://developer.linkedin.com/) and click on the **Create app** button.
 
 <Images
-  width={3024}
-  height={1654}
+  width={1520}
+  height={819}
   src="/docs/images/authentication-providers/linkedin/create-application.webp"
-  alt="The Linkedin Developer dashboard's homepage. A red arrow is pointing to the 'Create app' button."
+  alt="The Linkedin Developer dashboard's homepage. An arrow is pointing to the 'Create app' button."
 />
 
 
 Once redirected to the application creation form, you need to set a name, associate a LinkedIn page with it, and upload a logo for your new application.
 
 <Images
-  width={3024}
-  height={1654}
+  width={1520}
+  height={860}
   src="/docs/images/authentication-providers/linkedin/new-app-form.webp"
   alt="The 'Create new app' form in the Linkedin Developer portal."
 />
@@ -58,40 +58,56 @@ Once redirected to the application creation form, you need to set a name, associ
 To enable LinkedIn as a social connection for your Clerk application, go to the Clerk Dashboard. Navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. From the list of OAuth vendors, toggle on the LinkedIn option.
 
 <Images
-  width={3024}
-  height={1654}
+  width={1520}
+  height={822}
   src="/docs/images/authentication-providers/linkedin/enable-linkedin.webp"
-  alt="The 'Social connections' page in the Clerk Dashboard. A red arrow is pointing to the LinkedIn toggle."
+  alt="The 'Social connections' page in the Clerk Dashboard. An arrow is pointing to the LinkedIn toggle."
 />
 
 In the modal that opened, copy **Authorized redirect URI**. Keep this modal and page open.
 
 <Images
-  width={2490}
-  height={1394}
+  width={1512}
+  height={790}
   src="/docs/images/authentication-providers/linkedin/redirect-uri.webp"
-  alt="The LinkedIn settings modal in the Clerk Dashboard. A red arrow is pointing to the 'Redirect URI' copy button."
+  alt="The LinkedIn settings modal in the Clerk Dashboard. An arrow is pointing to the 'Redirect URI' copy button."
 />
 
-### Set the Authorized Redirect URI in your LinkedIn application
+### Set the Authorized Redirect URI for your LinkedIn application
 
-Navigate back to your LinkedIn app and go to the **Auth** tab.
+Navigate back to the LinkedIn Developer portal and go to the **Auth** tab.
 
 Scroll to the **OAuth 2.0 settings** section. In the **Authorized redirect URLs for your app** input, paste the **Authorized Redirect URI** value you copied from the Clerk Dashboard in the last step.
 
+<Images
+  width={1512}
+  height={790}
+  src="/docs/images/authentication-providers/linkedin/paste-uri.webp"
+  alt="The 'Auth' tab in the Linkedin Developer dashboard for a user's application. There are arrows pointing to where the redirect URI should be entered."
+/>
+
 ### Set the Client ID and Client Secret in your Clerk Dashboard
 
-In your LinkedIn app, navigate to the **Application credentials** section and copy the **Client ID** and **Client Secret**. Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields.
+In the LinkedIn Developer portal, navigate to the **Application credentials** section and copy the **Client ID** and **Client Secret**. 
+
+<Images
+  width={1512}
+  height={817}
+  src="/docs/images/authentication-providers/linkedin/copy-credentials.webp"
+  alt="The 'Auth' tab in the Linkedin Developer dashboard for a user's application. There are arrows pointing to the 'Client ID' and 'Client Secret' values."
+/>
+
+Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields.
 
 <Callout type="info">
   If the modal or page is not still open, go to the Clerk Dashboard and navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. Click on the settings cog icon next to the LinkedIn option. You can now paste the **Client ID** and **Client Secret** into their respective fields.
 </Callout>
 
 <Images
-  width={1096}
-  height={978}
-  src="/docs/images/authentication-providers/linkedin/configure-app.webp"
-  alt="The 'Auth' tab in the Linkedin Developer dashboard for a user's application. There is a red box around the 'Authentication keys' section, which contains the 'Client ID' and 'Client Secret' values. There is also a red box around the 'Authorized redirect URLs for your app' section."
+  width={1512}
+  height={790}
+  src="/docs/images/authentication-providers/linkedin/paste-credentials.webp"
+  alt="The LinkedIn settings modal in the Clerk Dashboard. There is an arrow pointing to the 'Client ID' and 'Client Secret' inputs."
 />
 
 ### Enable OpenID Connect in your LinkedIn application
