fix: rename whitelist/blacklist to allowlist/blocklist Most places in the docs reference allowlist/blocklist except for these remaining items. This PR brings them into alignment with the rest of our docs.

--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -28,7 +28,7 @@ src="/docs/images/authentication/restrictions/allowlist.jpg"
 alt="The 'Allowlist' section in the 'Restrictions' tab under the 'User & Authentication' section of the Clerk Dashboard. A red arrow is pointing to the 'Enable allowlist' toggle, which is toggled on."
 />
 
-After turning on the Allowlist feature, you can add individual email addresses and phone numbers, or whitelist entire email domains.
+After turning on the Allowlist feature, you can add individual email addresses and phone numbers, or allowlist entire email domains.
 
 For example, if you add "clerk.dev" as an allowed email domain, it means that anybody with a "@clerk.dev" email address can sign up for your application. Email addresses from different domains will not be able to sign up.
 
@@ -53,7 +53,7 @@ src="/docs/images/authentication/restrictions/blocklist.jpg"
 alt="The 'Blocklist' section in the 'Restrictions' tab under the 'User & Authentication' section of the Clerk Dashboard. A red arrow is pointing to the 'Enable blocklist' toggle, which is toggled on."
 />
 
-After turning on the Blocklist feature, you can add individual email addresses and phone numbers, or blacklist entire email domains.
+After turning on the Blocklist feature, you can add individual email addresses and phone numbers, or blocklist entire email domains.
 
 For example, if you add "clerk.dev" as a blocked email domain, it means that anybody with a "@clerk.dev" email address will not be able to sign up for your application. Email addresses from different domains will not be affected.
 
