--- a/docs/custom-flows/oauth-connections.mdx
+++ b/docs/custom-flows/oauth-connections.mdx
@@ -114,17 +114,17 @@ user
 
 With Clerk, you can add OAuth flows in your [React Native or Expo applications](/docs/quickstarts/expo).
 
-Clerk ensures that security critical nonces will be passed only to whitelisted URLs when the OAuth flow is complete in native browsers or webviews.
+Clerk ensures that security critical nonces will be passed only to allowlisted URLs when the OAuth flow is complete in native browsers or webviews.
 
-So for maximum security in your production instances, you need to whitelist your custom redirect URLs via the [Clerk Dashboard](https://dashboard.clerk.com/) or the [Clerk Backend API](https://clerk.com/docs/reference/backend-api/tag/Redirect-URLs).
+So for maximum security in your production instances, you need to allowlist your custom redirect URLs via the [Clerk Dashboard](https://dashboard.clerk.com/) or the [Clerk Backend API](https://clerk.com/docs/reference/backend-api/tag/Redirect-URLs).
 
-To whitelist a redirect URL via the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. On the **Social Connections** page, click on the **Settings* tab and add your redirect URL to the **Redirect URLs** list.
+To allowlist a redirect URL via the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. On the **Social Connections** page, click on the **Settings* tab and add your redirect URL to the **Redirect URLs** list.
 
 <Images
   width={3024}
   height={1654}
-  src="/docs/images/custom-flows/mobile-oauth-whitelist.jpg"
-  alt="The 'Social Connections' page of the Clerk Dashboard, with the 'Settings' tab selected. The 'Settings' tab shows a section titled 'Whitelist for mobile OAuth redirect' and has an input for redirect URLs."
+  src="/docs/images/custom-flows/mobile-oauth-allowlist.jpg"
+  alt="The 'Social Connections' page of the Clerk Dashboard, with the 'Settings' tab selected. The 'Settings' tab shows a section titled 'allowlist for mobile OAuth redirect' and has an input for redirect URLs."
 />
 
 ## OAuth account transfer flow
