--- a/docs/troubleshooting/email-deliverability.mdx
+++ b/docs/troubleshooting/email-deliverability.mdx
@@ -31,8 +31,8 @@ Following the practices below will allow emails to be delivered quickly and reli
 ## Deliverability factors
 Email deliverability is made of a number of factors, each contributing to whether or not it will get classified as spam, quarantined, or delayed.
 
-### IP address reputation and blacklists
-Email providers check against a pool of IP addresses and domain blacklists to protect against bad actors. Clerk is constantly monitoring to make sure our IP addresses are not on any of these lists. If you're experiencing issues, it may be helpful to verify that your domain doesn't live on any of these lists.
+### IP address reputation and blocklists
+Email providers check against a pool of IP addresses and domain blocklists to protect against bad actors. Clerk is constantly monitoring to make sure our IP addresses are not on any of these lists. If you're experiencing issues, it may be helpful to verify that your domain doesn't live on any of these lists.
 
 ### Domain name reputation
 Every domain name (i.e. `example.com`, `clerk.com`, etc.) has its own reputation score. Newer domains do not have a high score, and this may impact deliverability.
