--- a/docs/references/nodejs/token-verification.mdx
+++ b/docs/references/nodejs/token-verification.mdx
@@ -31,7 +31,7 @@ const clerk = clerkClient({ jwtKey: 'my_clerk_public_key' });
 
 ## Validate the Authorized Party of a session token
 
-Clerk's JWT session token contains the `azp` claim, which equals the Origin of the request during token generation. You can provide the middlewares with a list of whitelisted origins to verify against, to protect your application of the subdomain cookie leaking attack. You can find an example below:
+Clerk's JWT session token contains the `azp` claim, which equals the Origin of the request during token generation. You can provide the middlewares with a list of allowlisted origins to verify against, to protect your application of the subdomain cookie leaking attack. You can find an example below:
 
 <CodeBlockTabs type="framework" options={["Next.js", "Node"]}>
 ```js
