makes separate guide for creator role

--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -9,12 +9,18 @@ You can use Clerk’s authorization logic to grant organization members access t
 
 ## Roles
 
-Roles determine a user's level of access to the organization. For each instance there are currently two default roles: 
+Roles determine a user's level of access to the organization. For each instance there are currently two default roles:
 
-- **Admin (`org:admin`)** Offers full access to organization resources. Members with the admin role have all the System Permissions. They can fully manage organizations and organization memberships.
+- **Admin (`org:admin`)** Offers full access to organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage organizations and organization memberships.
 - **Member (`org:member`)** The default role for new organization members. Access to organization resources is limited to only Read members Permission by default. They cannot manage organizations and organization memberships but can view information about the organization and other members in it.
 
-There is a “Creator Role” distinction assigned by default to the Admin Role. Users with the ability to create Organizations belong to the Role that has this distinction.
+### The Creator Role
+
+When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned the default Role of `admin`. By default, `admin` is the Creator Role. 
+
+<Callout type="warning">
+You can't delete a Role if it's used as the Organization Creator Role. However, you can [reassign the Creator Role to another role](/docs/organizations/creator-role).
+</Callout>
 
 ### Custom Roles
 
@@ -38,18 +44,6 @@ Clerk has a set of System Permissions that power Clerk’s Frontend API and [Org
 - Manage domains (`org:sys_domains:manage`)
 
 You can assign these System Permissions to Roles. 
-
-### Deleting the Admin Role and reassigning the Creator Role
-
-If a Role has **delete organization, read members,** and **manage members** Permissions, it can be assigned the “Creator Role.” The Admin role is the Creator Role by default. Organization owners and users with the Creator Role can:
-
-- [create organizations](/docs/organizations/creating-organizations)
-- [invite other users to join the organization](/docs/organizations/inviting-users) An invitation email is sent out, and organization invitations support adding existing users of your application, or new ones. New users can register once they accept the invitation.
-- use [verified domains](/docs/organizations/verified-domains) to enhance how users can join organizations. Once a verified domain is added to an organization, administrators can choose between different enrollment modes that will determine how new members will be added.
-- [manage roles](/docs/organizations/managing-roles), such as revoking an invitation for a user that hasn't joined yet or removing a user who is already a member from the organization. When removing organization members or updating their role, there needs to be at least one administrator for the organization at all times.
-- [update an organization name](/docs/organizations/updating-organizations)
-
-If you want to delete the Admin role, you will will have to create another role with the same System Permissions and assign it the “Creator Role.
 
 ### Custom Permissions
 
