fixing issue where overview was 404ing

--- a/docs/organizations/creator-role.mdx
+++ b/docs/organizations/creator-role.mdx
@@ -1,6 +1,6 @@
 ---
 title: Reassign the Creator Role
-description: Learn about how to create and manage Clerk Organizations and their members.
+description: Learn how to assign Clerk's Creator Role to any other Role in an Organization.
 content-type: guide
 ---
 
