updating the protect component

--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -1,37 +1,29 @@
 ---
 title: <Protect />
-description: The `<Protect />` component is used to only render content that a user with a role with the correct permissions can access.
+description: The <Protect /> component is used to only render content that a user with a role with the correct permissions can access.
 ---
 
 # `<Protect />`
 
-The `<Protect />` component is used to render... TODO the rest is boilerplate from another component. Just follow the format.
+The `<Protect />` component only renders content that a user with [a Role with the correct Permissions](/docs/organizations/roles-permissions) can access.
 
 ## Usage
 
-```jsx
-<Protect role="org:admin">
-    {children}
-</Protect>
-```
+### Render content by Role
 
-```jsx
-<Protect permission="org:domains:read">
-  {children}
-</Protect>
-```
+The children of the following component will only be visible to users with the `admin` Role.
 
-<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+<Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
     ```jsx
     import { Protect } from "@clerk/nextjs";
 
     export default function ProtectPage() {
-        return (
-            <Protect role="org:admin">
-                {children}
-            </Protect>
-        );
+      return (
+        <Protect role="org:admin">
+          {children}
+        </Protect>
+      );
     }
     ```
   </Tab>
@@ -41,21 +33,59 @@ The `<Protect />` component is used to render... TODO the rest is boilerplate fr
     import { Protect } from "@clerk/react";
 
     export default function ProtectPage() {
-        return (
-            <Protect role="org:admin">
-                {children}
-            </Protect>
-        );
+      return (
+        <Protect role="org:admin">
+          {children}
+        </Protect>
+      );
     }
     ```
   </Tab>
 </Tabs>
 
+### Render content by Permissions
+
+The children of the following component will only be visible to users with Roles that have `domains:read` Permissions.
+
+<Tabs type="framework" items={["Next.js", "React"]}>
+  <Tab>
+    ```jsx
+    import { Protect } from "@clerk/nextjs";
+
+    export default function ProtectPage() {
+      return (
+        <Protect permission="org:domains:read">
+          {children}
+        </Protect>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx
+    import { Protect } from "@clerk/react";
+
+    export default function ProtectPage() {
+      return (
+        <Protect permission="org:domains:read">
+          {children}
+        </Protect>
+      );
+    }
+    ```
+  </Tab>
+</Tabs>
+
+<Callout type="warning">
+  Be sure to prefix all Roles and Permissions with `org:`.
+</Callout>
+
 ## Properties
 
-TODO: are these optional?
+Pass one of these properties.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `role` | `string` | TODO |
-| `permission` | `string` | TODO. |
+| `role` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
+| `permission` | `string` | Optional string corresponding to a Role's Permission in the format `org:<resource>:action` |
