prepping to create roles and permissions

--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -1,17 +1,18 @@
 ---
-title: Create custom roles and assign permissions with Clerk
-description: 
+title: Create custom Roles and assign Permissions with Clerk
+description: Use the Clerk Dashboad to create and assign Roles and Permissions to users in your Organization.
 ---
 
-# Create custom roles and assign permissions with Clerk
+# Create custom Roles and assign Permissions with Clerk
 
-## Outcomes
+## Create a new Role for your Organization
 
-- Create a custom role for your organization
-- Assign custom permissions to that role
-- Use those permissions to control editorial permissions on the content (CRUD) using backend logic
-- Changing a user’s role in an org
+## Assign Permissions to a Role
 
-## Note
+## Change a user’s Role in an Organization
 
-You can update members ship both from the dashboard (admin/developer/admin of org view), and also from the organization profile (end user view).
+---
+
+## Editor's Notes
+
+* You can update membership both from the dashboard (admin/developer/admin of org view), and also from the organization profile (end user view).
