Adding clarifications around how <Protect/> works

--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -9,6 +9,10 @@ The `<Protect />` component only renders content that a user with [a Role with t
 
 ## Usage
 
+You can pass either a `role` or `permission` to `<Protect />` to limit who can see the content it renders. If you do not pass either prop, `<Protect />` behaves the same as [`<SignIn />`](/docs/components/authentication/sign-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
+
+For more complex authorization logic, pass conditional logic to the `condition` prop.
+
 ### Render content by Role
 
 The children of the following component will only be visible to users with the `admin` Role.
@@ -20,7 +24,10 @@ The children of the following component will only be visible to users with the `
 
     export default function ProtectPage() {
       return (
-        <Protect role="org:admin">
+        <Protect
+          role="org:admin"
+          fallback={<p>Only an admin can access this content.</p>}
+        >
           {children}
         </Protect>
       );
@@ -34,7 +41,10 @@ The children of the following component will only be visible to users with the `
 
     export default function ProtectPage() {
       return (
-        <Protect role="org:admin">
+        <Protect
+          role="org:admin"
+          fallback={<p>Only an admin can access this content.</p>}
+        >
           {children}
         </Protect>
       );
@@ -54,7 +64,10 @@ The children of the following component will only be visible to users with Roles
 
     export default function ProtectPage() {
       return (
-        <Protect permission="org:domains:read">
+        <Protect 
+          permission="org:domains:read"
+          fallback={<p>You do not have the permissions to access this.</p>}
+        >
           {children}
         </Protect>
       );
@@ -68,7 +81,10 @@ The children of the following component will only be visible to users with Roles
 
     export default function ProtectPage() {
       return (
-        <Protect permission="org:domains:read">
+        <Protect 
+          permission="org:domains:read"
+          fallback={<p>You do not have the permissions to access this.</p>}
+        >
           {children}
         </Protect>
       );
@@ -89,3 +105,5 @@ Pass one of these properties.
 | --- | --- | --- |
 | `role` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
 | `permission` | `string` | Optional string corresponding to a Role's Permission in the format `org:<resource>:action` |
+| `fallback` | `JSX` | An optional snippet of JSX to show when a user doesn't have the `role` or `permission` to access the protected content. |
+| `condition` | `has => has({permission: <"org:team_settings:manage">}) || has({permission: "org:team_settings:read"})` | Optional conditional logic that renders the children if it returns `true`. |
