it's signedin, not signin

--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -9,7 +9,7 @@ The `<Protect />` component only renders content that a user with [a Role with t
 
 ## Usage
 
-You can pass either a `role` or `permission` to `<Protect />` to limit who can see the content it renders. If you do not pass either prop, `<Protect />` behaves the same as [`<SignIn />`](/docs/components/authentication/sign-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
+You can pass either a `role` or `permission` to `<Protect />` to limit who can see the content it renders. If you do not pass either prop, `<Protect />` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
 
 For more complex authorization logic, pass conditional logic to the `condition` prop.
 
