making some edits like changing the paradigm to billing and sales

--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -5,13 +5,13 @@ description: Learn about how to create and manage roles and permissions for Cler
 
 # Roles and Permissions
 
-You can use Clerk’s authorization logic to grant organization members access to different resources based on their Role.
+Clerk supports modeling your own custom Roles and Permissions to control access to resources within your application when you use [Organizations](/docs/organizations/overview).
 
 ## Roles
 
 Roles determine a user's level of access to the organization. For each instance there are currently two default roles:
 
-- **Admin (`org:admin`)** Offers full access to organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage organizations and organization memberships.
+- **Admin (`org:admin, previously `org:basic_member`)** Offers full access to organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage organizations and organization memberships.
 - **Member (`org:member`)** The default role for new organization members. Access to organization resources is limited to only Read members Permission by default. They cannot manage organizations and organization memberships but can view information about the organization and other members in it.
 
 ### The Creator Role
@@ -26,7 +26,15 @@ You can't delete a Role if it's used as the Organization Creator Role. However, 
 
 You can create up to 10 of custom Organization Roles per application instance to meet your application needs.
 
-For example you can create a new Role of “moderator” (`org:moderator`) which can be used to group users who belong to a specific department of the Organization and have permission to manage other users.  
+<Callout type="information">
+If you need more than 10 Roles, reach out to [support@clerk.dev](mailto:support@clerk.dev).
+</Callout>
+
+For example you can create a new Role of “billing” (`org:billing`) which can be used to group users who belong to a specific department of the Organization and have permission to manage other users. 
+
+<Callout type="information">
+Each Role must have a prefix of `org:`.
+</Callout>
 
 ## Permissions
 
@@ -51,4 +59,4 @@ You can achieve some access and action privileges using Roles and System Permiss
 
 When creating a new Permission, follow the format `org:<resource>:<action>`. You can then assign the Permission to an existing Role.
 
-For example, you could create a new Role “editor” (`org:editor`) and a new Permission “Edit posts” (`org:posts:edit`) which allows only users with this permission to edit your application’s posts. (You could also grant this Permission to the “moderator” Role if your app’s moderators are in charge of enforcing content policies for user generated posts!)
+For example, you could create a new Role “sales” (`org:sales`) and a new Permission “Create invoices” (`org:invoices:create`) which allows only users with this Permission to edit invoices. (You could also grant this Permission to the “billing” Role!)
