--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -42,7 +42,9 @@ Permissions grant users privileged access to resources and operations like creat
 
 ### System Permissions
 
-Clerk has a set of System Permissions that power Clerk’s Frontend API and [Organization related Clerk Components](/docs/components/overview#organization-components). Clerk’s System Permissions consist of the following:
+Clerk has a set of System Permissions that power Clerk’s Frontend API and [Organization related Clerk Components](/docs/components/overview#organization-components). They are a baseline set of permissions that Clerk needs to operate functionally. You cannot delete them, but you can extend them with your own application’s requirements.
+
+Clerk’s System Permissions consist of the following:
 
 - Manage organization (`org:sys_profile:manage`)
 - Delete organization (`org:sys_profile:delete`)
@@ -54,8 +56,6 @@ Clerk has a set of System Permissions that power Clerk’s Frontend API and [Org
 You can assign these System Permissions to Roles. 
 
 ### Custom Permissions
-
-You can achieve some access and action privileges using Roles and System Permissions alone, but often you will need to specify what actions on a resource are/are not available to a user. You can create your own Permissions to compliment your app’s business logic, like restricting access of protected areas of your business for certain users. 
 
 When creating a new Permission, follow the format `org:<resource>:<action>`. You can then assign the Permission to an existing Role.
 
